<resources>
    <string name="app_name">Project3QA</string>
    <string name="title_activity_quiz_questions_pandora">QuizQuestionsPandora</string>
    <string name="question_1">1. What is her name?</string>
    <string name="question_2">2. What is she?</string>
    <string name="question_3">3. What color is she?</string>
    <string name="question_4">4. What breed is she?</string>
    <string name="question_5">5. How old is Pandora?</string>
    <string name="question_6">6. How many walk she has per day?</string>
    <string name="question_7">7. What food she eats?</string>
    <string name="question_8">8. What does she hates?</string>
    <string name="answer">Answer</string>
    <string name="AA2">Dog</string>
    <string name="AB2">Cat</string>
    <string name="AC2">Bird</string>
    <string name="AA3">White</string>
    <string name="AB3">Black</string>
    <string name="AC3">Brown</string>
    <string name="AA4">Chihuahua</string>
    <string name="AB4">Rat Terrier</string>
    <string name="AC4">Mini Pincher</string>
    <string name="AA5">7 yrs</string>
    <string name="AB5">6 yrs</string>
    <string name="AC5">8 yrs</string>
    <string name="AA6">1-2</string>
    <string name="AB6">2-3</string>
    <string name="AC6">3-4</string>
    <string name="AB7">Blue Basic</string>
    <string name="AC7">Blue Wilderness</string>
    <string name="AA8">Rain</string>
    <string name="AB8">Snow</string>
    <string name="AD8">Wind</string>
    <string name="submit">Submit</string>
    <string name="thank_you">Thank You!</string>
    <string name="view_score">View Score</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="reset">Reset</string>
</resources>
