<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizPandora"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="@dimen/margin16">
        <LinearLayout
            style="@style/lineal_layout">
            <TextView
                style="@style/question_styles"
                android:text="@string/question_1" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:layout_margin="@dimen/margin10"
                android:inputType="textCapWords"
                android:id="@+id/Q1AA"/>
        </LinearLayout>
        <LinearLayout
            style="@style/lineal_layout">
            <TextView
                style="@style/question_styles"
                android:text="@string/question_2" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/Q2RG">
                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/AA2"
                    android:layout_marginLeft="@dimen/margin10"
                    android:id="@+id/Q2AA"/>
                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/AB2"
                    android:layout_toRightOf="@id/Q2AA"
                    android:id="@+id/Q2AB"/>
                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/AC2"
                    android:layout_toRightOf="@id/Q2AB"/>
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            style="@style/lineal_layout">
            <TextView
                style="@style/question_styles"
                android:text="@string/question_3"
                android:id="@+id/Q3Q" />
            <CheckBox
                style="@style/checkBox"
                android:text="@string/AA3"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_below="@id/Q3Q"
                android:id="@+id/Q3AA"/>
            <CheckBox
                style="@style/checkBox"
                android:text="@string/AB3"
                android:layout_below="@id/Q3Q"
                android:layout_toRightOf="@id/Q3AA"
                android:id="@+id/Q3AB"/>
            <CheckBox
                style="@style/checkBox"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_below="@id/Q3Q"
                android:layout_toRightOf="@id/Q3AB"
                android:text="@string/AC3"
                android:id="@+id/Q3AC"/>
        </RelativeLayout>
       <LinearLayout
           style="@style/lineal_layout">
           <TextView
               style="@style/question_styles"
               android:text="@string/question_4" />
           <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:id="@+id/Q4RG">

               <RadioButton
                   style="@style/radioButton"
                   android:text="@string/AC4"
                   android:layout_marginLeft="@dimen/margin10"
                   android:id="@+id/Q4AA"/>
               <RadioButton
                   style="@style/radioButton"
                   android:text="@string/AB4"
                   android:id="@+id/Q4AB"
                   android:layout_toRightOf="@id/Q4AA"/>


           </RadioGroup>
       </LinearLayout>
        <LinearLayout
            style="@style/lineal_layout">
            <TextView
                style="@style/question_styles"
                android:text="@string/question_5" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/Q5RG">
                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/AA5"
                        android:layout_marginLeft="@dimen/margin10"
                        android:id="@+id/Q5AA" />
                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/AB5"
                        android:id="@+id/Q5AC"
                        android:layout_toRightOf="@id/Q5AA"/>
                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/AC5"
                        android:id="@+id/Q5AB"
                        android:layout_toRightOf="@id/Q5AC"/>
            </RadioGroup>
        </LinearLayout>
       <LinearLayout
           style="@style/lineal_layout">
           <TextView
               style="@style/question_styles"
               android:text="@string/question_6"
               />
           <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:id="@+id/Q6RG">
                   <RadioButton
                       style="@style/radioButton"
                       android:text="@string/AA6"
                       android:layout_marginLeft="@dimen/margin10"
                       android:id="@+id/Q6AA"/>
                   <RadioButton
                       style="@style/radioButton"
                       android:text="@string/AB6"
                       android:id="@+id/Q6AB"
                       android:layout_toRightOf="@id/Q6AA"/>
                   <RadioButton
                       style="@style/radioButton"
                       android:text="@string/AC6"
                       android:layout_toRightOf="@id/Q6AB"/>
           </RadioGroup>
       </LinearLayout>
        <LinearLayout
            style="@style/lineal_layout">
            <TextView
                style="@style/question_styles"
                android:text="@string/question_7"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/Q7RG">
                    <RadioButton
                        style="@style/radioButton"
                        android:layout_marginLeft="@dimen/margin10"
                        android:text="@string/AC7"
                        android:id="@+id/Q7AA"/>
                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/AB7"
                        android:id="@+id/Q7AB"
                        android:layout_toRightOf="@id/Q7AA"/>

            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            style="@style/lineal_layout">
            <TextView
                style="@style/question_styles"
                android:text="@string/question_8"
                android:id="@+id/Q8Q" />
            <CheckBox
                style="@style/checkBox"
                android:text="@string/AA8"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_below="@id/Q8Q"
                android:id="@+id/Q8AA"/>
            <CheckBox
                style="@style/checkBox"
                android:text="@string/AB8"
                android:layout_below="@id/Q8Q"
                android:id="@+id/Q8AB"
                android:layout_toRightOf="@id/Q8AA"/>
            <CheckBox
                style="@style/checkBox"
                android:text="@string/AD8"
                android:id="@+id/Q8AC"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_toRightOf="@id/Q8AB"
                android:layout_below="@id/Q8Q"/>

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="30dp"
            android:onClick="submitAnswers"/>

    </LinearLayout>


</ScrollView>